tests/fail/BitwiseAndError.java
package fail;

public class BitwiseAndError {
    public static void main(String[] args) {
        System.out.println("a" & 1);
    }
}